# cppfightinggame

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: CodeArchitecture.txt  TechnicalDesign.txt
libs/: readme.txt
src/: CharacterData.hpp  CollisionSystem.hpp  Component.hpp  CppFightingGame.cpp  Game.hpp  GameSimulation.hpp  Input.hpp  common.hpp
src/ActionStates/: CommonStates.hpp  StateMachine.hpp
src/utils/: math.hpp
